--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,17 +11,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Second"
-        tools:targetApi="31"
-        tools:ignore="ExtraText">
+        tools:ignore="ExtraText"
+        tools:targetApi="31">
         <activity
-            android:name=".playerVsPlayerForm"
-            android:exported="true" ><!--        changed exported as  true from false-->
+            android:name=".initialPage"
+            android:exported="true" ><!-- changed exported as  true from false -->
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            <!--       added intent-filter here so default page is changed-->
+            </intent-filter><!-- added intent-filter here so default page is changed -->
+        </activity>
+        <activity
+            android:name=".playerVsPlayerForm"
+            android:exported="false">
+
+
         </activity>
         <activity
             android:name=".botVsPlayerForm"
@@ -31,10 +37,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="false"/>
-<!--        changed exported as false from true-->
-
-
+            android:exported="false" />
     </application>
 
 </manifest>
